Fixed a few, missing margin on about pg

--- a/navigation.css
+++ b/navigation.css
@@ -1,6 +1,3 @@
-html {
-    font-size: 16px;
-}
 
 /* Header specific styles */
 html {
@@ -44,7 +41,7 @@ button:hover, button:focus {
     justify-content: space-around;
     margin: 0 auto;
     width: 45%;
-    border-style: solid; 
+    border-style: solid;
     border-color: #000000;
     border-width: 0 4px 4px;
     border-radius: 20px;
@@ -160,7 +157,7 @@ a {
         width: 80%;
         border-width: 0 3px;
     }
-    
+
     .nav-links {
         width: 100%;
     }
@@ -192,11 +189,11 @@ a {
     .header-links {
         width: 90%;
     }
-    
+
     .nav-links {
         width: 100%;
     }
-    
+
     button {
         padding: 3%;
     }
@@ -222,7 +219,7 @@ a {
         padding: 4%;
     }
 
-    
+
     #foot #topLink {
         width: 15%;
     }
